// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage component Should render correctly 1`] = `
<div
  className="u-flex u-flex-column u-maw-6 u-mih-2 u-bdrs-4 u-ph-1 u-pt-1 u-bg-paleGrey u-ta-left u-bg-chablis u-maw-none"
>
  <SubTitle
    className="u-mb-1 u-pomegranate"
    ellipsis={false}
    tag="div"
  >
    Bad credentials
  </SubTitle>
  <div
    className="u-flex u-w-100 u-mb-1"
  >
    <Text
      className="u-ta-left"
      ellipsis={false}
      tag="div"
    >
      Bad credentials. Check the konnector fields and run the connection again.
    </Text>
  </div>
</div>
`;

exports[`ErrorMessage component Should render correctly if two fa session expired 1`] = `
<div
  className="u-flex u-flex-column u-maw-6 u-mih-2 u-bdrs-4 u-ph-1 u-pt-1 u-bg-paleGrey u-ta-left u-bg-chablis u-maw-none"
>
  <SubTitle
    className="u-mb-1 u-pomegranate"
    ellipsis={false}
    tag="div"
  >
    Relaunch the connexion to the service to fetch your data
  </SubTitle>
  <div
    className="u-flex u-w-100 u-mb-1"
  >
    <Text
      className="u-ta-left"
      ellipsis={false}
      tag="div"
    >
      The last connexion to the service failed; please launch it again. You may have to provide a validation code.
    </Text>
  </div>
  <div
    className="u-flex-shrink-0 u-mb-1"
  >
    <ComponentWithLocales
      trigger={Object {}}
    >
      [Function]
    </ComponentWithLocales>
  </div>
</div>
`;

exports[`ErrorMessage component Should render correctly if wrong twofa code error 1`] = `
<div
  className="u-flex u-flex-column u-maw-6 u-mih-2 u-bdrs-4 u-ph-1 u-pt-1 u-bg-paleGrey u-ta-left u-bg-chablis u-maw-none"
>
  <SubTitle
    className="u-mb-1 u-pomegranate"
    ellipsis={false}
    tag="div"
  >
    Wrong two-factore code provided
  </SubTitle>
  <div
    className="u-flex u-w-100 u-mb-1"
  >
    <Text
      className="u-ta-left"
      ellipsis={false}
      tag="div"
    >
      The two-factor code provided is wrong, please start again.
    </Text>
  </div>
  <div
    className="u-flex-shrink-0 u-mb-1"
  >
    <ComponentWithLocales
      trigger={Object {}}
    >
      [Function]
    </ComponentWithLocales>
  </div>
</div>
`;
